force-app/main/default/objects/CareCloud_Payment__c/CareCloud_Payment__c.object-meta.xml
<CustomObject>
    <label>CareCloud Transaction</label>
    <nameField>
        <displayFormat>CCP-{00000000}</displayFormat>
        <label>CareCloud Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CareCloud Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>