force-app/main/default/objects/CareCloud_Payment__c/fields/Attending_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Attending_Provider_Id__c</fullName>
    <label>Attending Provider Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>