force-app/main/default/objects/CareCloud_Payment__c/fields/CareCloud_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>CareCloud Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>