force-app/main/default/objects/CareCloud_Payment__c/fields/Created_Today__c.field-meta.xml
<CustomField>
    <fullName>Created_Today__c</fullName>
    <formula>DATEVALUE( CreatedDate ) = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Today</label>
    <type>Checkbox</type>
</CustomField>