force-app/main/default/objects/CareCloud_Payment__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>posted</fullName>
            </value>
            <value>
                <fullName>not_posted</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>