force-app/main/default/objects/CareCloud_Payment__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>simple_charge_reversal</fullName>
            </value>
            <value>
                <fullName>charge_reversal</fullName>
            </value>
            <value>
                <fullName>returned_insurance_check_reversal</fullName>
            </value>
            <value>
                <fullName>returned_patient_check_reversal</fullName>
            </value>
            <value>
                <fullName>simple_charge</fullName>
            </value>
            <value>
                <fullName>charge</fullName>
            </value>
            <value>
                <fullName>returned_insurance_check</fullName>
            </value>
            <value>
                <fullName>returned_patient_check</fullName>
            </value>
            <value>
                <fullName>insurance_adjustment</fullName>
            </value>
            <value>
                <fullName>insurance_adjustment_refund</fullName>
            </value>
            <value>
                <fullName>insurance_adjustment_refund_reversal</fullName>
            </value>
            <value>
                <fullName>insurance_adjustment_reversal</fullName>
            </value>
            <value>
                <fullName>insurance_payment</fullName>
            </value>
            <value>
                <fullName>insurance_payment_refund</fullName>
            </value>
            <value>
                <fullName>insurance_payment_refund_reversal</fullName>
            </value>
            <value>
                <fullName>insurance_payment_reversal</fullName>
            </value>
            <value>
                <fullName>patient_adjustment</fullName>
            </value>
            <value>
                <fullName>patient_adjustment_reversal</fullName>
            </value>
            <value>
                <fullName>patient_payment</fullName>
            </value>
            <value>
                <fullName>patient_payment_refund</fullName>
            </value>
            <value>
                <fullName>patient_payment_refund_reversal</fullName>
            </value>
            <value>
                <fullName>patient_payment_reversal</fullName>
            </value>
            <value>
                <fullName>withhold</fullName>
            </value>
            <value>
                <fullName>withhold_refund</fullName>
            </value>
            <value>
                <fullName>withhold_refund_reversal</fullName>
            </value>
            <value>
                <fullName>withhold_reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>