force-app/main/default/objects/CareCloud_Payment__c/fields/Unapplied_Credit__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Credit__c</fullName>
    <label>Unapplied Credit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>