force-app/main/default/objects/CareCloud_Payment__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>